# text-classifier

./: README.md  classifier.ipynb  pyproject.toml
